2007-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Make sure a line beginning with a number
	(i.e. a section heading) is followed immediately by a parallel entry
	beginning with '?'.  Not applied in the NEWS section, however.
	Bug #1655632

	*docs/gnuplot.texi: Sync to current doc file.

2007-06-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/plot.c (inter): Cleanup: Use bail_to_command_line() instead of
	LONGJMP directly.

2007-06-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graph3d.h: Remove fields 'ticslevel' and 'xyplane_z' from 
	struct t_xyplane; replaceboth with 'z'.

	* src/tables.h src/tables.c:  Added S_XYPLANE to better distinguish
	between "set xyplane" and "set ticslevel", i.e., no need to move
	token backward.

	* src/mouse.c src/save.c src/show.c src/unset.c:  Minor mods for
	variable name change and addition of S_XYPLANE.

	* src/set.c:  Broke set_ticslevel into set_ticslevel and set_xyplane.

	* src/graph3d.c: Fixed bug with drawing xyplane and z-axis line.
	Bug #1488168

2007-06-21  Ethan Merritt  <merritt@u.washington.edu>

	Fix two special cases where gnuplot auto-increments the line type, but
	does not check whether the user has requested user-defined line styles
	instead (via "set style increment user").

	* src/graph3d.c (do_3dplot cntr3d_lines):  If the [default] option
	`set clabel` is in effect then contours auto-increment over line types.
	Check for prefer_line_styles at this point.

	* src/graphics.c (do_plot plot_boxes): Columnstacked histograms auto-
	increment over line types.  Check for prefer_line_styles at thie point.

2007-06-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/readline.c (readline_ipc): Cleanup: do not use the so-called
	"alternate interface" to GNU Readline, it is useless here. The only
	required thing is setting rl_getc_function.

	* src/gpexecute.c (gp_exec_event): Cleanup: Use DEBUG and FPRINTF.

	* src/help.c (ShowSubtopics): Do not print the list of available